--- a/src/GUI/Views/CEOView.fxml
+++ b/src/GUI/Views/CEOView.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="606.0" prefWidth="869.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.CEOController">
+<BorderPane fx:id="borderPaneCEO" prefHeight="606.0" prefWidth="869.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.CEOController">
    <left>
       <Pane prefHeight="606.0" prefWidth="204.0" BorderPane.alignment="CENTER">
          <children>
@@ -17,20 +19,40 @@
                   <Image url="@../Images/WUAV.png" />
                </image>
             </ImageView>
-            <Button layoutX="33.0" layoutY="554.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" text="Button" />
-            <Button layoutX="32.0" layoutY="358.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" text="Button" />
-            <Button layoutX="33.0" layoutY="273.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" text="Button" />
-            <Button layoutX="33.0" layoutY="185.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" text="Button" />
+            <Button fx:id="btnLogout" layoutX="33.0" layoutY="546.0" mnemonicParsing="false" onAction="#handleLogout" prefHeight="30.0" prefWidth="140.0" text="Logout" />
+            <Button fx:id="btnShowDevices" layoutX="32.0" layoutY="358.0" mnemonicParsing="false" onAction="#handleShowDevices" prefHeight="30.0" prefWidth="140.0" text="Devices" />
+            <Button fx:id="btnshowInstellations" layoutX="33.0" layoutY="273.0" mnemonicParsing="false" onAction="#handleShowInstellations" prefHeight="30.0" prefWidth="140.0" text="Instellations" />
+            <Button fx:id="btnShowUsers" layoutX="33.0" layoutY="185.0" mnemonicParsing="false" onAction="#handleShowUsers" prefHeight="30.0" prefWidth="140.0" text="Users" />
          </children>
       </Pane>
    </left>
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="95.0" layoutY="544.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" text="Button" />
-            <Button layoutX="275.0" layoutY="544.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" text="Button" />
-            <Button layoutX="448.0" layoutY="544.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" text="Button" />
-            <Text layoutX="57.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Users" wrappingWidth="76.13671875" />
+            <Button fx:id="btnCreate" layoutX="95.0" layoutY="544.0" mnemonicParsing="false" onAction="#handleCreate" prefHeight="30.0" prefWidth="140.0" text="Create" />
+            <Button fx:id="btnDelete" layoutX="275.0" layoutY="544.0" mnemonicParsing="false" onAction="#handleDelete" prefHeight="30.0" prefWidth="140.0" text="Delete" />
+            <Button fx:id="btnOpen" layoutX="448.0" layoutY="544.0" mnemonicParsing="false" onAction="#handleOpen" prefHeight="30.0" prefWidth="140.0" text="Open" />
+            <Text fx:id="txtViewName" layoutX="57.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Users" wrappingWidth="76.13671875" />
+            <TableView fx:id="tbvUserlist" layoutX="45.0" layoutY="128.0" prefHeight="365.0" prefWidth="570.0" AnchorPane.leftAnchor="45.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="130.0">
+              <columns>
+                <TableColumn fx:id="clmUserId" prefWidth="75.0" text="Id" />
+                <TableColumn fx:id="clmUserName" prefWidth="317.0" text="Name" />
+                  <TableColumn fx:id="clmUserClass" minWidth="0.0" prefWidth="176.0" text="Class" />
+              </columns>
+            </TableView>
+            <TableView fx:id="tbvInstellationlist" layoutX="55.0" layoutY="138.0" prefHeight="365.0" prefWidth="570.0" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="130.0">
+               <columns>
+                  <TableColumn fx:id="clmINSId" prefWidth="75.0" text="Id" />
+                  <TableColumn fx:id="clmCostumerName" prefWidth="230.0" text="Costumer Name" />
+                  <TableColumn fx:id="clmINSAddress" minWidth="0.0" prefWidth="263.0" text="Address" />
+               </columns>
+            </TableView>
+            <TableView fx:id="tbvDevicelist" layoutX="65.0" layoutY="148.0" prefHeight="365.0" prefWidth="570.0" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="130.0">
+               <columns>
+                  <TableColumn fx:id="clmDeviceId" prefWidth="75.0" text="Id" />
+                  <TableColumn fx:id="clmDeviceName" prefWidth="494.0" text="Name" />
+               </columns>
+            </TableView>
          </children>
       </AnchorPane>
    </center>
