--- a/src/GUI/Views/CEOView.fxml
+++ b/src/GUI/Views/CEOView.fxml
@@ -21,7 +21,7 @@
             </ImageView>
             <Button fx:id="btnLogout" layoutX="33.0" layoutY="546.0" mnemonicParsing="false" onAction="#handleLogout" prefHeight="30.0" prefWidth="140.0" text="Logout" />
             <Button fx:id="btnShowDevices" layoutX="32.0" layoutY="358.0" mnemonicParsing="false" onAction="#handleShowDevices" prefHeight="30.0" prefWidth="140.0" text="Devices" />
-            <Button fx:id="btnshowInstellations" layoutX="33.0" layoutY="273.0" mnemonicParsing="false" onAction="#handleShowInstellations" prefHeight="30.0" prefWidth="140.0" text="Instellations" />
+            <Button fx:id="btnshowInstallations" layoutX="33.0" layoutY="273.0" mnemonicParsing="false" onAction="#handleShowInstallations" prefHeight="30.0" prefWidth="140.0" text="Installations" />
             <Button fx:id="btnShowUsers" layoutX="33.0" layoutY="185.0" mnemonicParsing="false" onAction="#handleShowUsers" prefHeight="30.0" prefWidth="140.0" text="Users" />
          </children>
       </Pane>
@@ -40,7 +40,7 @@
                   <TableColumn fx:id="clmUserClass" minWidth="0.0" prefWidth="176.0" text="Class" />
               </columns>
             </TableView>
-            <TableView fx:id="tbvInstellationlist" layoutX="55.0" layoutY="138.0" prefHeight="365.0" prefWidth="570.0" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="130.0">
+            <TableView fx:id="tbvInstallationlist" layoutX="55.0" layoutY="138.0" prefHeight="365.0" prefWidth="570.0" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="130.0">
                <columns>
                   <TableColumn fx:id="clmINSId" prefWidth="75.0" text="Id" />
                   <TableColumn fx:id="clmCostumerName" prefWidth="230.0" text="Costumer Name" />
