--- a/src/GUI/Views/TechnicianView.fxml
+++ b/src/GUI/Views/TechnicianView.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="borderPaneCEO" prefHeight="606.0" prefWidth="869.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.TechnicianViewController">
+<BorderPane fx:id="borderPaneTechnician" prefHeight="606.0" prefWidth="869.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.TechnicianViewController" stylesheets="/GUI/Css/TechnicianViewCss.css" styleClass="root">
    <left>
       <Pane prefHeight="606.0" prefWidth="204.0" BorderPane.alignment="CENTER">
          <children>
@@ -26,18 +26,18 @@
       </Pane>
    </left>
    <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" styleClass="anchor-pane">
          <children>
-            <Button fx:id="btnCreate" layoutX="95.0" layoutY="544.0" mnemonicParsing="false" onAction="#handleCreate" prefHeight="30.0" prefWidth="140.0" text="Create" />
-            <Button fx:id="btnDelete" layoutX="275.0" layoutY="544.0" mnemonicParsing="false" onAction="#handleDelete" prefHeight="30.0" prefWidth="140.0" text="Delete" />
-            <Button fx:id="btnOpen" layoutX="448.0" layoutY="544.0" mnemonicParsing="false" onAction="#handleOpen" prefHeight="30.0" prefWidth="140.0" text="Open" />
-            <Text fx:id="txtViewName" layoutX="57.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Installations" wrappingWidth="76.13671875" />
+            <Button fx:id="btnCreate" layoutX="95.0" layoutY="544.0" mnemonicParsing="false" onAction="#handleCreate" prefHeight="30.0" prefWidth="140.0" text="Create" styleClass="buttonothertext" />
+            <Button fx:id="btnDelete" layoutX="275.0" layoutY="544.0" mnemonicParsing="false" onAction="#handleDelete" prefHeight="30.0" prefWidth="140.0" text="Delete" styleClass="buttonothertext" />
+            <Button fx:id="btnOpen" layoutX="448.0" layoutY="544.0" mnemonicParsing="false" onAction="#handleOpen" prefHeight="30.0" prefWidth="140.0" text="Open"  styleClass="buttonothertext"/>
+            <Text fx:id="txtViewName" layoutX="55.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Installations" wrappingWidth="179.336669921875" styleClass="text" />
             <TableView fx:id="tbvInstallationlist" layoutX="55.0" layoutY="138.0" prefHeight="365.0" prefWidth="570.0" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="130.0">
                <columns>
                   <TableColumn fx:id="clmINSId" prefWidth="75.0" text="Id" />
                   <TableColumn fx:id="clmCostumerName" prefWidth="184.0" text="Costumer Name" />
                   <TableColumn fx:id="clmINSAddress" minWidth="0.0" prefWidth="177.60003662109375" text="Address" />
-                  <TableColumn fx:id="clmINSDate11" maxWidth="254.39999999999998" minWidth="0.0" prefWidth="132.79998779296875" text="Date" />
+                  <TableColumn fx:id="clmINSDate" maxWidth="254.39999999999998" minWidth="0.0" prefWidth="132.79998779296875" text="Date" />
                </columns>
             </TableView>
             <TableView fx:id="tbvMyInstallationlist" prefHeight="365.0" prefWidth="570.0" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="130.0">
@@ -45,7 +45,7 @@
                   <TableColumn fx:id="clmINSId1" prefWidth="75.0" text="Id" />
                   <TableColumn fx:id="clmCostumerName1" prefWidth="184.0" text="Costumer Name" />
                   <TableColumn fx:id="clmINSAddress1" minWidth="0.0" prefWidth="177.60003662109375" text="Address" />
-                  <TableColumn fx:id="clmINSDate111" maxWidth="254.39999999999998" minWidth="0.0" prefWidth="132.79998779296875" text="Date" />
+                  <TableColumn fx:id="clmINSDate1" maxWidth="254.39999999999998" minWidth="0.0" prefWidth="132.79998779296875" text="Date" />
                </columns>
             </TableView>
          </children>
