--- a/src/GUI/Views/CEOView.fxml
+++ b/src/GUI/Views/CEOView.fxml
@@ -35,23 +35,23 @@
             <Text fx:id="txtViewName" layoutX="57.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Users" wrappingWidth="156.13671875" />
             <TableView fx:id="tbvUserlist" layoutX="45.0" layoutY="128.0" prefHeight="365.0" prefWidth="570.0" AnchorPane.leftAnchor="45.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="130.0">
               <columns>
-                <TableColumn fx:id="clmUserId" prefWidth="75.0" text="Id" />
-                <TableColumn fx:id="clmUserName" prefWidth="317.0" text="Name" />
-                  <TableColumn fx:id="clmUserClass" minWidth="0.0" prefWidth="176.0" text="Class" />
+                <TableColumn fx:id="clmUserId" prefWidth="75.0" resizable="false" text="Id" />
+                <TableColumn fx:id="clmUserName" prefWidth="317.0" resizable="false" text="Name" />
+                  <TableColumn fx:id="clmUserClass" minWidth="0.0" prefWidth="176.0" resizable="false" text="Class" />
               </columns>
             </TableView>
             <TableView fx:id="tbvInstallationlist" layoutX="55.0" layoutY="138.0" prefHeight="365.0" prefWidth="570.0" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="130.0">
                <columns>
-                  <TableColumn fx:id="clmINSId" prefWidth="75.0" text="Id" />
-                  <TableColumn fx:id="clmCostumerName" prefWidth="149.0" text="Costumer Name" />
-                  <TableColumn fx:id="clmINSAddress" minWidth="0.0" prefWidth="208.0" text="Address" />
-                  <TableColumn fx:id="clmINSDate" minWidth="0.0" prefWidth="137.0" text="Date" />
+                  <TableColumn fx:id="clmINSId" prefWidth="75.0" resizable="false" text="Id" />
+                  <TableColumn fx:id="clmCostumerName" prefWidth="149.0" resizable="false" text="Costumer Name" />
+                  <TableColumn fx:id="clmINSAddress" minWidth="0.0" prefWidth="208.0" resizable="false" text="Address" />
+                  <TableColumn fx:id="clmINSDate" minWidth="0.0" prefWidth="137.0" resizable="false" text="Date" />
                </columns>
             </TableView>
             <TableView fx:id="tbvDevicelist" layoutX="685.0" layoutY="-84.0" prefHeight="365.0" prefWidth="570.0" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="130.0">
                <columns>
-                  <TableColumn fx:id="clmDeviceId" prefWidth="75.0" text="Id" />
-                  <TableColumn fx:id="clmDeviceName" prefWidth="494.0" text="Name" />
+                  <TableColumn fx:id="clmDeviceId" prefWidth="75.0" resizable="false" text="Id" />
+                  <TableColumn fx:id="clmDeviceName" prefWidth="494.0" resizable="false" text="Name" />
                </columns>
             </TableView>
          </children>
