--- a/src/GUI/Views/DocumentationView.fxml
+++ b/src/GUI/Views/DocumentationView.fxml
@@ -36,7 +36,7 @@
       <AnchorPane prefHeight="606.0" prefWidth="714.0" styleClass="anchor-pane" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="btnAddImage" layoutX="268.0" layoutY="543.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Add Image" AnchorPane.leftAnchor="268.0" AnchorPane.topAnchor="543.0" />
-            <Button fx:id="btnAddDevice" layoutX="448.0" layoutY="543.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Add Device" AnchorPane.leftAnchor="448.0" AnchorPane.topAnchor="543.0" />
+            <Button fx:id="btnAddDevice" layoutX="448.0" layoutY="543.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Add Device" AnchorPane.leftAnchor="448.0" AnchorPane.topAnchor="543.0" onAction="#handleAddDevice" />
             <Button fx:id="btnRemove" layoutX="621.0" layoutY="543.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Remove" AnchorPane.leftAnchor="621.0" AnchorPane.topAnchor="543.0" />
             <TextField fx:id="txtCostumerName" layoutX="36.0" layoutY="52.0" promptText="Costumer Name" AnchorPane.leftAnchor="36.0" AnchorPane.topAnchor="52.0" />
             <TextField fx:id="txtAddress" layoutX="195.0" layoutY="52.0" promptText="Address" AnchorPane.leftAnchor="195.0" AnchorPane.topAnchor="52.0" />
