--- a/src/GUI/Views/ProjectManagerView.fxml
+++ b/src/GUI/Views/ProjectManagerView.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -46,6 +47,7 @@
                   <TableColumn fx:id="clmDeviceName" prefWidth="494.0" resizable="false" text="Name" />
                </columns>
             </TableView>
+            <TextField fx:id="txfSearch" layoutX="466.0" layoutY="94.0" onKeyPressed="#searchOnButtonPress" promptText="Search" />
          </children>
       </AnchorPane>
    </center>
