--- a/src/GUI/Css/AddDeviceViewCss.css
+++ b/src/GUI/Css/AddDeviceViewCss.css
@@ -14,16 +14,20 @@
     -fx-background-radius:20px;
 }
 
-.buttonothertext
-{
-    -fx-background-color: #FC4C02;
-    -fx-text-fill: #393939;
-    -fx-background-radius:20px;
-}
-
 .button:focused
 {
     -fx-border-color: transparent;
+}
+
+.menu-button{
+    -fx-background-color: #FC4C02;
+    -fx-text-fill: #F8F8F8;
+    -fx-background-radius:20px;
+}
+
+.menu-item{
+    -fx-background-color: #444444;
+    -fx-text-fill: #F8F8F8;
 }
 
 .text-field
@@ -31,39 +35,6 @@
     -fx-background-color: #ECF2F7;
     -fx-border-color: #444444;
     -fx-border-radius:5px;
-}
-
-.text, .label
-{
-    -fx-font-size: 16;
-    -fx-text-fill: #393939;
-}
-
-.table-view
-{
-    -fx-background-color: transparent;
-    -fx-border-style: none;
-    -fx-border-width: 0px;
-}
-
-.table-view:focused
-{
-    -fx-border-color: transparent;
-}
-
-
-.table-view .corner
-{
-    -fx-background-color: transparent;
-}
-
-.table-view .column-header-background
-{
-    -fx-background-color:#FC4C02;
-    -fx-text-fill: #393939;
-    -fx-background-radius: 10px 10px 0px 0px;
-    -fx-background-insets: 0 0 0 0;
-    -fx-padding: 0 0 5px 0;
 }
 
 .table-view .column-header {
