fixed some stuff and the device problem

--- a/src/GUI/Css/AddDeviceViewCss.css
+++ b/src/GUI/Css/AddDeviceViewCss.css
@@ -33,8 +33,7 @@
 .text-field
 {
     -fx-background-color: #ECF2F7;
-    -fx-border-color: #444444;
-    -fx-border-radius:5px;
+    -fx-background-radius: 5px;
 }
 
 .table-view .column-header {
