--- a/src/GUI/Css/LoginViewCss.css
+++ b/src/GUI/Css/LoginViewCss.css
@@ -12,6 +12,7 @@
     -fx-background-color: #FC4C02;
     -fx-text-fill: #F8F8F8;
     -fx-background-radius:20px;
+    -fx-font-size: 16px;
 }
 
 .text-field
