--- a/src/GUI/Views/LoginView.fxml
+++ b/src/GUI/Views/LoginView.fxml
@@ -9,13 +9,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="/GUI/Css/LoginViewCss.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.LoginViewController" onKeyPressed="#handleEnter">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#handleEnter" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@../Css/LoginViewCss.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.LoginViewController">
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
             <TextField fx:id="txtUsername" layoutX="352.0" layoutY="200.0" prefHeight="26.0" prefWidth="173.0" promptText="Username" />
             <PasswordField fx:id="pfPasswordField" layoutX="351.0" layoutY="239.0" prefHeight="26.0" prefWidth="173.0" promptText="Password" />
-            <Button fx:id="btnLogin" layoutX="480.0" layoutY="275.0" mnemonicParsing="false" onAction="#loginAction" text="Login" />
+            <Button fx:id="btnLogin" layoutX="465.0" layoutY="270.0" mnemonicParsing="false" onAction="#loginAction" text="Login" />
             <Button fx:id="btnClose" layoutX="518.0" layoutY="352.0" mnemonicParsing="false" onAction="#closeAction" text="Close" />
             <ImageView fitHeight="134.0" fitWidth="133.0" layoutX="26.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true">
                <image>
