--- a/src/GUI/Css/DocumentationViewCss.css
+++ b/src/GUI/Css/DocumentationViewCss.css
@@ -5,6 +5,8 @@
 {
     -fx-background-color: #393939;;
     -fx-font-family: 'Russo One', sans-serif;
+    -fx-border-color: #000000;
+    -fx-border-width: 3px;
 }
 
 .button
@@ -34,6 +36,8 @@
 .text-field
 {
     -fx-background-color: #ECF2F7;
+    -fx-border-color: #444444;
+    -fx-border-radius:5px;
 }
 
 .text, .label
@@ -79,4 +83,19 @@
 {
     -fx-background-color: transparent;
     -fx-text-fill: #393939;
+    -fx-border-color: #444444;
+    -fx-border-radius:5px;
+}
+
+.menu-item .label
+{
+    -fx-text-fill: #393939;
+}
+
+.menu-item:focused{
+    -fx-background-color: #444444;
+}
+
+.menu-item:focused .label{
+    -fx-text-fill: #F8F8F8;
 }
