--- a/src/GUI/Css/LoginViewCss.css
+++ b/src/GUI/Css/LoginViewCss.css
@@ -5,6 +5,8 @@
 {
     -fx-background-color: #393939;;
     -fx-font-family: 'Russo One', sans-serif;
+    -fx-border-color: #bbbbbb;
+    -fx-border-radius:5px;
 }
 
 .button
