--- a/src/GUI/Views/DocumentationView.fxml
+++ b/src/GUI/Views/DocumentationView.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="borderPaneCEO" prefHeight="606.0" prefWidth="1321.0" styleClass="root" stylesheets="/GUI/Css/DocumentationViewCss.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.DocumentationViewController">
+<BorderPane fx:id="borderPaneCEO" prefHeight="606.0" prefWidth="1321.0" styleClass="root" stylesheets="@../Css/DocumentationViewCss.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.DocumentationViewController">
    <left>
       <Pane prefHeight="606.0" prefWidth="204.0" BorderPane.alignment="CENTER">
          <children>
@@ -36,22 +36,22 @@
       <AnchorPane prefHeight="606.0" prefWidth="714.0" styleClass="anchor-pane" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="btnAddImage" layoutX="268.0" layoutY="543.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Add Image" AnchorPane.leftAnchor="268.0" AnchorPane.topAnchor="543.0" />
-            <Button fx:id="btnAddDevice" layoutX="448.0" layoutY="543.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Add Device" AnchorPane.leftAnchor="448.0" AnchorPane.topAnchor="543.0" onAction="#handleAddDevice" />
+            <Button fx:id="btnAddDevice" layoutX="448.0" layoutY="543.0" mnemonicParsing="false" onAction="#handleAddDevice" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Add Device" AnchorPane.leftAnchor="448.0" AnchorPane.topAnchor="543.0" />
             <Button fx:id="btnRemove" layoutX="621.0" layoutY="543.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Remove" AnchorPane.leftAnchor="621.0" AnchorPane.topAnchor="543.0" />
-            <TextField fx:id="txtCostumerName" layoutX="36.0" layoutY="52.0" promptText="Costumer Name" AnchorPane.leftAnchor="36.0" AnchorPane.topAnchor="52.0" />
-            <TextField fx:id="txtAddress" layoutX="195.0" layoutY="52.0" promptText="Address" AnchorPane.leftAnchor="195.0" AnchorPane.topAnchor="52.0" />
-            <TextField fx:id="txtZipCode" layoutX="354.0" layoutY="52.0" promptText="Zip-code" AnchorPane.leftAnchor="354.0" AnchorPane.topAnchor="52.0" />
-            <TextField fx:id="txtCostumerType" layoutX="36.0" layoutY="93.0" promptText="Costumer type" AnchorPane.leftAnchor="36.0" AnchorPane.topAnchor="93.0" />
-            <MenuButton fx:id="menuTypes" layoutX="186.0" layoutY="93.0" mnemonicParsing="false" text="Types" AnchorPane.leftAnchor="186.0" AnchorPane.topAnchor="93.0" />
+            <TextField fx:id="txtCostumerName" layoutX="39.0" layoutY="54.0" promptText="Costumer Name" AnchorPane.leftAnchor="39.0" AnchorPane.topAnchor="54.0" />
+            <TextField fx:id="txtAddress" layoutX="205.0" layoutY="54.0" promptText="Address" AnchorPane.leftAnchor="205.0" AnchorPane.topAnchor="54.0" />
+            <TextField fx:id="txtZipCode" layoutX="367.0" layoutY="54.0" promptText="Zip-code" AnchorPane.leftAnchor="367.0" AnchorPane.topAnchor="54.0" />
+            <TextField fx:id="txtCostumerType" layoutX="36.0" layoutY="90.0" prefHeight="37.0" prefWidth="153.0" promptText="Costumer type" AnchorPane.leftAnchor="36.0" AnchorPane.topAnchor="90.0" />
+            <MenuButton fx:id="menuTypes" layoutX="190.0" layoutY="89.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="32.0" text="Types" AnchorPane.leftAnchor="190.0" AnchorPane.topAnchor="90.0" />
             <TextArea fx:id="txtaComments" layoutX="36.0" layoutY="133.0" prefHeight="208.0" prefWidth="478.0" promptText="Comments/Documentation" wrapText="true" AnchorPane.leftAnchor="36.0" AnchorPane.topAnchor="133.0" />
             <ListView fx:id="lvImages" layoutX="661.0" layoutY="75.0" prefHeight="200.0" prefWidth="422.0" AnchorPane.leftAnchor="661.0" AnchorPane.topAnchor="75.0" />
             <ListView fx:id="lvDevices" layoutX="661.0" layoutY="316.0" prefHeight="200.0" prefWidth="424.0" AnchorPane.leftAnchor="661.0" AnchorPane.topAnchor="316.0" />
             <Label layoutX="661.0" layoutY="55.0" prefHeight="18.0" prefWidth="76.0" text="Images:" AnchorPane.leftAnchor="661.0" AnchorPane.topAnchor="55.0" />
             <Label layoutX="661.0" layoutY="294.0" text="Devices:" AnchorPane.leftAnchor="661.0" AnchorPane.topAnchor="294.0" />
-            <TextField fx:id="txtLocation" layoutX="279.0" layoutY="93.0" promptText="Location" AnchorPane.leftAnchor="279.0" AnchorPane.topAnchor="93.0" />
+            <TextField fx:id="txtLocation" layoutX="262.0" layoutY="95.0" promptText="Location" AnchorPane.leftAnchor="262.0" AnchorPane.topAnchor="95.0" />
             <DatePicker fx:id="dpDatePicker" layoutX="443.0" layoutY="93.0" promptText="Date" AnchorPane.leftAnchor="443.0" AnchorPane.topAnchor="93.0" />
             <ListView fx:id="lvTechniciansOnProject" layoutX="36.0" layoutY="379.0" prefHeight="137.0" prefWidth="478.0" AnchorPane.leftAnchor="36.0" />
-            <Text fx:id="txtTech" layoutX="36.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Technicians on Project:" wrappingWidth="139.13671875" />
+            <Text fx:id="txtTech" layoutX="36.0" layoutY="364.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Technicians on Project:" wrappingWidth="197.53668212890625" />
             <Button fx:id="btnRemoveTechnician" layoutX="36.0" layoutY="518.0" mnemonicParsing="false" onAction="#handleRemoveTechnician" text="Remove Technician" />
          </children>
       </AnchorPane>
